argocd/config/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames: ["argo.darkflame.dev"]
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
